--- a/schedule.qmd
+++ b/schedule.qmd
@@ -10,7 +10,7 @@ listing:
       subtitle: "Time"
       title: "Session"
     table-hover: true
-    sort: [filename]
+    sort: [order]
     sort-ui: false
     filter-ui: false
     image-height: 75px
@@ -23,7 +23,7 @@ listing:
       subtitle: "Time"
       title: "Session"
     table-hover: true
-    sort: [filename]
+    sort: [order]
     sort-ui: false
     filter-ui: false
     image-height: 75px
@@ -36,7 +36,7 @@ listing:
       subtitle: "Time"
       title: "Session"
     table-hover: true
-    sort: [filename]
+    sort: [order]
     sort-ui: false
     filter-ui: false
     image-height: 75px
@@ -49,7 +49,7 @@ listing:
       subtitle: "Time"
       title: "Session"
     table-hover: true
-    sort: [filename]
+    sort: [order]
     sort-ui: false
     filter-ui: false
     image-height: 75px
@@ -62,7 +62,7 @@ listing:
       subtitle: "Time"
       title: "Session"
     table-hover: true
-    sort: [filename]
+    sort: [order]
     sort-ui: false
     filter-ui: false
     image-height: 75px
