--- a/index.qmd
+++ b/index.qmd
@@ -37,9 +37,9 @@ During the training, participants will gain knowledge and skills in:
 
 ## Instructor
 
-![](images/bahman.jpg){style="float:right;padding: 0 0 0 10px;" fig-alt="Headshot of Dr. Bahman Rostami-Tabar" width="200"}
+![](images/photo_Bhaman.jpeg){style="float:right;padding: 0 0 0 10px;" fig-alt="Headshot of Dr. Bahman Rostami-Tabar" width="200"}
 
-TBC
+Bahman is a Reader (Associate Professor) in Data-Driven Decision Science at Cardiff Business School, Cardiff University, UK. He serves as the director of the [Data Lab for Social Good Research Group](https://www.cardiff.ac.uk/research/explore/research-units/data-lab-for-social-good) at Cardiff University and is also the founder of the [Forecasting for Social Good committee](https://www.f4sg.org/) within the International Institute of Forecasters.  Bahman specializes in the development and application of modelling, forecasting and management science tools and techniques providing informed insights for planning & decision-making processes in sectors contributing to social good, including healthcare operations, global health and humanitarian supply chains, agriculture and food, social sustainability, and governmental policy. His collaborative efforts have spanned a multitude of organisations, including notable bodies such as the National Health Service (NHS), Welsh Ambulance Service Trusts (WAST), United States Agency for International Developments (USAID), the International Committee of the Red Cross (ICRC), and John Snow Inc. (JSI). A remarkable highlight of his contributions is his pivotal role in disseminating forecasting knowledge especially in low and lower-middle income countries through the [democratizing forecasting](https://www.f4sg.org/services/democratising-forecasting/) project sponsored by International Institute of Forecasters.
 
 <div align="center">
 <a href="http://www.bahmanrt.com/"><img border="0" alt="Website" src="https://assets.dryicons.com/uploads/icon/svg/4926/home.svg" width="35" height="35"></a>&ensp;
